css/style.css
/*styling divmaincontainer*/
div#divmaincontainer{
  width:80%;
  margin:auto;
  /* border:1px solid purple; */
}
/**/
/* styling the header of the site*/
header#siteheader{
  padding:20px;
  width:100%;
  height:150px;
  background-image:linear-gradient(greenyellow,cyan,teal);
  border:1px solid darkgrey
  border-radius:10px 10px 0 0;
}
/* styling site title*/
h1#sitetitle{
  test-align:centre;
  font-family:Arial;
  font-size:32px;
  color:orange;
}
/* site motto*/
span#motto{
  font-size:10px;
  font-family:tahoma;
  color:aqua;
  text-align:centre;
}
  

